--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,48 @@
 * {
-    margin-left: 30px;
-    padding: 0;
-    box-sizing: border-box;
+  margin-left: 30px;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Lora', Arial, Helvetica, sans-serif;
+  font-family: "Lora", Arial, Helvetica, sans-serif;
 }
 
-@media screen and (min-width: 320px){
-    .menu {
-        margin-top: 30px;
-    }
-    
-    .menu a {
+@media screen and (min-width: 320px) {
+  .menu {
+    margin-top: 30px;
+  }
+
+  .menu a {
     display: inline-block;
     text-decoration: none;
-    }
-    
-    .main-body {
-        width: 100%;
-        margin-top: 50px;
-    }
-    
-    .container {
-        width: auto;
-        height: 600px;
-        display: block;
-    }
-    
-    
-    /* CLASSES UTILITÁRIAS*/
-    
-    .text-purple {
-        color: #440644;
-    }
+  }
+
+  .main-body {
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  .container {
+    width: auto;
+    height: 600px;
+    display: block;
+  }
+
+  .form {
+    margin-top: 20px;
+    background-color: rgb(180, 175, 175);
+    margin-bottom: 100px;
+  }
+
+  .btnForm {
+    display: flex;
+    margin-top: 20px;
+  }
+
+  /* CLASSES UTILITÁRIAS*/
+
+  .text-purple {
+    color: #440644;
+  }
 }
