--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 * {
-  margin-left: 30px;
+  margin-left: 50px;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+header {
+  font-size: 40px;
+  display: flex;
+  text-align: center;
 }
 
 body {
@@ -24,25 +31,58 @@ body {
   }
 
   .container {
-    width: auto;
-    height: 600px;
-    display: block;
+    width: max-content;
   }
 
   .form {
+    width: 400px;
     margin-top: 20px;
+    margin-bottom: 10px;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    font-size: 18px;
     background-color: rgb(180, 175, 175);
-    margin-bottom: 100px;
+    border-radius: 5px;
+  }
+
+  .form h1 {
+    font-size: 40px;
+    text-align: start;
+  }
+
+  .form h2 {
+    font-size: 25px;
+    text-align: center;
+    margin-left: 0;
+    margin-bottom: 50px;
+  }
+
+  .form label {
+    font-size: 25px;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .form input {
+    font-size: 20px;
+    margin: 10px 0 10px 0;
+    padding: 5px 8px;
+    width: 300px;
   }
 
   .btnForm {
-    display: flex;
+    display: block;
+    width: 100px;
+    padding: 8px 12px;
     margin-top: 20px;
+    border: 1px solid gray;
+    border-radius: 7px;
+    font-size: 18px;
+    background-color: white;
+    cursor: pointer;
   }
 
   /* CLASSES UTILITÁRIAS*/
 
-  .text-purple {
-    color: #440644;
-  }
-}
+
+ 
