--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ header {
   font-size: 40px;
   display: flex;
   text-align: center;
+  margin-left: 200px;
 }
 
 body {
@@ -35,7 +36,7 @@ body {
   }
 
   .form {
-    width: 400px;
+    width: 500px;
     margin-top: 20px;
     margin-bottom: 10px;
     padding-top: 30px;
@@ -48,13 +49,15 @@ body {
   .form h1 {
     font-size: 40px;
     text-align: start;
+    padding-left: 80px;
   }
 
-  .form h2 {
+  .form p {
     font-size: 25px;
     text-align: center;
     margin-left: 0;
-    margin-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .form label {
@@ -82,7 +85,23 @@ body {
     cursor: pointer;
   }
 
+  #resultJSimples {
+    font-size: 25px;
+    text-align: center;
+    margin-left: 0;
+    margin-bottom: 50px;
+    padding-top: 30px;
+    color: rgb(29, 28, 28);
+  }
+
+  #resultJComposto {
+    font-size: 25px;
+    text-align: center;
+    margin-left: 0;
+    margin-bottom: 50px;
+    padding-top: 30px;
+    color: rgb(29, 28, 28);
+  }
+
   /* CLASSES UTILITÁRIAS*/
-
-
- 
+}
